# monitoring-scripts-py

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  cache-id.txt  nonces.txt  pyproject.toml  requirements.txt  tks-trigger-cache.json
.github/workflows/: _run-monitoring.yml  aave-bad-debt.yml  bad-debt.yml  ci.yml  comp-bad-debt.yml  daily.yml  hourly.yml  maker-bad-debt.yml  morpho.yml  multisig-checker.yml  test-safe.yml  usdai-mint-monitor.yml  weekly.yml
3jane/: README.md  main.py
3jane/abi/: ERC4626Vault.json  ProtocolConfig.json
aave/: README.md  main.py  proposals.py
aave/abi/: AToken.json  AavePool.json
bad-debt/: bad-debt-trigger.py
cap/: README.md  large_mints.py  liquidity.py
cap/abi/: CToken.json  TokenizedStrategy.json  YearnV3Vault.json
common-abi/: BalancerQuery.json  BalancerVault.json  ERC20.json  LoanRouter.json  Strategy.json  YearnV3Vault.json
compound/: README.md  collateral.py  main.py  proposals.py  response.json  test_tally.py
compound/abi/: CTokenV3.json
ethena/: README.md  ethena.py
euler/: README.md  bad_debt.py  markets.py
fluid/: README.md  proposals.py
infinifi/: README.md  governance.py  large_mints.py  main.py
inverse/: README.md  inverse.py
inverse/abi/: sdola.json
lido/: README.md
lido-polygon/: main.py
lido-polygon/abi/: StMatic.json
lido/steth/: main.py
lido/steth/abi/: CurvePool.json
lido/stmatic/: main.py
liquityv2/: bold.py
lrt-pegs/: README.md  origin_protocol.py  uniswap_v3.py
lrt-pegs/abi/: Fluid_DexResolver.json  OriginVault.json  OriginVaultBase.json
lrt-pegs/balancer/: main.py
lrt-pegs/curve/: main.py
lrt-pegs/fluid/: main.py
maker/: README.md  proposals.py
maple/: README.md  collateral.py  main.py
maple/abi/: LoanManager.json  Strategy.json  SyrupUSDCPool.json  WithdrawalManagerQueue.json
moonwell/: README.md  bad_debt.py  proposals.py
morpho/: README.md  bad_debt.py  baddebt.py  governance.py  main.py  markets.py  markets_graph.py  morpho-oracle-validation.md  morpho_ql_schema.txt
morpho/abi/: morpho_blue.json
pendle/: README.md  main.py
pendle/abi/: PendleMarket.json  PendleStrategy.json
prices/: README.md  main.py
prices/abi/: AggregatorV3.json
resolv/: README.md  resolv.py
resolv/abi/: usr_price_storage.json  usr_redemption.json
rtoken/: README.md  monitor_rtoken.py
rtoken/abi/: rtoken.json  strsr.json
safe/: main.py  specific.py
silo/: README.md  main.py  ur_sniff.py
silo/abi/: SiloLens.json
spark/: README.md  main.py
stables/: main.py
stargate/: README.md  main.py
stargate/abi/: StargatePool.json
strata/: README.md  main.py
tests/: __init__.py  test_ai_explainer.py  test_calldata_decoder.py  test_llm.py  test_paste.py  test_pr167_cap_timelock.py  test_pr167_model_compare.py  test_tenderly_simulation.py  test_timelock_alerts.py  test_utils.py  test_yvusd.py
timelock/: README.md  SKILL.md  calldata_decoder.py  known_selectors.py  timelock_alerts.py
usd0/: README.md  main.py  price.py
usdai/: README.md  governance.py  large_mints.py  large_transfers.py  main.py
ustb/: README.md  main.py
ustb/abi/: ChainlinkAggregator.json  SuperstateOracle.json
utils/: abi.py  ai_explainer.py  alert.py  assets.py  cache.py  chains.py  config.py  defillama.py  dispatch.py  erc20_large_transfer_monitor.py  erc20_supply_delta_monitor.py  formatting.py  gauntlet.py  http.py  logging.py  paste.py  proxy.py  telegram.py  tenderly.py  web3_wrapper.py
utils/calldata/: __init__.py  decoder.py
utils/llm/: README.md  __init__.py  ai_explainer.py  anthropic_provider.py  base.py  factory.py  openai_compat.py
utils/tenderly/: README.md  alerts.json  simulation.py  tenderly.py
yearn/: README.md  alert_large_flows.py  check_endorsed.py  check_shadow_debt.py  check_stuck_triggers.py  yvusd.py
yearn/abi/: LockedYvUSD.json  YearnV3Vault.json
yvusd/: main.py
