# Project configuration for tools only, not for distribution

[project]
name = "monitoring-scripts-py"
version = "0.1.0"
description = "Monitoring scripts for blockchain protocols"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohappyeyeballs>=2.5.0",
    "aiohttp==3.12.2",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "async-timeout==4.0.3",
    "attrs==24.2.0",
    "bitarray==2.9.2",
    "black==24.10.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.3.2",
    "ckzg==2.0.1",
    "click==8.1.7",
    "cytoolz==0.12.3",
    "dataclasses-json==0.6.7",
    "deprecated==1.2.14",
    "dune-client==1.7.7",
    "eth-abi==5.1.0",
    "eth-account==0.13.3",
    "eth-hash==0.7.0",
    "eth-keyfile==0.8.1",
    "eth-keys==0.5.1",
    "eth-rlp==2.1.0",
    "eth-typing==5.0.0",
    "eth-utils==5.0.0",
    "exceptiongroup==1.2.2",
    "frozenlist==1.4.1",
    "hexbytes==1.2.1",
    "idna==3.8",
    "iniconfig==2.0.0",
    "markdown-it-py==3.0.0",
    "marshmallow==3.23.0",
    "mccabe==0.7.0",
    "mdformat==0.7.22",
    "mdurl==0.1.2",
    "multidict==6.0.5",
    "mypy==1.15.0",
    "mypy-extensions==1.0.0",
    "ndjson==0.3.1",
    "packaging==24.1",
    "parsimonious==0.10.0",
    "pathspec==0.12.1",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "pycodestyle==2.12.1",
    "pycryptodome==3.20.0",
    "pydantic==2.8.2",
    "pydantic-core==2.20.1",
    "pyflakes==3.2.0",
    "pytest==8.3.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pyunormalize==15.0.0",
    "regex==2024.7.24",
    "requests==2.32.4",
    "rlp==4.0.1",
    "ruff==0.9.9",
    "six==1.16.0",
    "tomli==2.0.2",
    "toolz==0.12.1",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "urllib3==2.5.0",
    "web3==7.2.0",
    "websockets==13.0.1",
    "wrapt==1.16.0",
    "yarl>=1.17.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.9",
    "mypy>=1.14.1",
    "types-deprecated==1.2.9.20240311",
    "types-python-dateutil==2.9.0.20241003",
    "types-pyyaml==6.0.12.20240917",
    "types-requests==2.32.0.20240712",
    "types-setuptools==75.2.0.20241025",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "safe", "silo", "lido", "aave", "usd0", "euler",
    "maker", "spark", "pendle", "morpho", "stargate",
    "compound", "moonwell", "utils"
]

[tool.ruff]
# Longer line length for better readability
line-length = 120
target-version = "py310"
# Exclude a variety of commonly ignored directories
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
]

[tool.ruff.lint]
# Enable these rules
select = ["E", "F", "I", "W"]  # pycodestyle, pyflakes, isort, and warnings
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
ignore = ['E501']

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["web3.*", "cytoolz.*"]
ignore_missing_imports = true