# Project configuration for tools only, not for distribution

[project]
name = "monitoring-scripts-py"
version = "0.1.0"
description = "Monitoring scripts for blockchain protocols"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs>=2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "async-timeout==5.0.1",
    "attrs==25.4.0",
    "bitarray==3.8.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.4",
    "ckzg==2.1.6",
    "click==8.3.1",
    "cytoolz==1.1.0",
    "dataclasses-json==0.6.7",
    "deprecated==1.3.1",
    "defillama-sdk==0.1.4",
    "dune-client==1.7.10",
    "eth-abi==5.2.0",
    "eth-account==0.13.7",
    "eth-hash==0.7.1",
    "eth-keyfile==0.8.1",
    "eth-keys==0.7.0",
    "eth-rlp==2.2.0",
    "eth-typing==5.2.1",
    "eth-utils==5.3.1",
    "frozenlist==1.8.0",
    "hexbytes==1.3.1",
    "idna==3.11",
    "marshmallow==3.26.2",
    "multidict==6.7.1",
    "ndjson==0.3.1",
    "packaging==26.0",
    "parsimonious==0.10.0",
    "propcache==0.4.1",
    "pycryptodome==3.23.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pyunormalize==17.0.0",
    "regex==2026.2.28",
    "requests==2.32.5",
    "rlp==4.1.0",
    "six==1.17.0",
    "toolz==1.1.0",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "urllib3==2.6.3",
    "web3==7.14.1",
    "websockets==15.0.1",
    "wrapt==2.1.1",
    "yarl>=1.23.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]
dev = [
    "black==26.1.0",
    "iniconfig==2.3.0",
    "markdown-it-py==4.0.0",
    "mccabe==0.7.0",
    "mdformat==1.0.0",
    "mdurl==0.1.2",
    "mypy==1.19.1",
    "mypy-extensions==1.1.0",
    "pathspec==1.0.4",
    "platformdirs==4.9.4",
    "pluggy==1.6.0",
    "pycodestyle==2.14.0",
    "pyflakes==3.4.0",
    "pytest==9.0.2",
    "ruff==0.15.5",
    "tomli==2.4.0",
    "types-deprecated==1.3.1.20260130",
    "types-python-dateutil==2.9.0.20260305",
    "types-pyyaml==6.0.12.20250915",
    "types-requests==2.32.4.20260107",
    "types-setuptools==82.0.0.20260210",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "aave", "bad-debt", "cap", "compound", "ethena", "euler",
    "fluid", "infinifi", "lido", "lrt-pegs", "maker", "moonwell",
    "maple", "morpho", "pendle", "resolv", "rtoken",
    "safe", "silo", "spark", "stargate", "timelock", "usd0", "usdai",
    "utils", "yearn",
]

[tool.ruff]
# Longer line length for better readability
line-length = 120
target-version = "py312"
# Exclude a variety of commonly ignored directories
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
]

[tool.ruff.lint]
# Enable these rules
select = ["E", "F", "I", "W"]  # pycodestyle, pyflakes, isort, and warnings
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
ignore = ['E501']

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["web3.*", "cytoolz.*"]
ignore_missing_imports = true